--- a/Assignment_1_GUVI.ipynb
+++ b/Assignment_1_GUVI.ipynb
@@ -10,53 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "ee5cf1d6",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "welcome\n",
-      "         For registration : Press : '1'\n",
-      "         For login        : Press :'2'\n",
-      "1\n",
-      "Enter your valid Email_ID  : mhaddd@gmail.com\n",
-      "please enter the password   : Hari@123456\n",
-      "successfully registered\n",
-      "welcome\n",
-      "         For registration : Press : '1'\n",
-      "         For login        : Press :'2'\n",
-      "7\n",
-      "worngly entered \n"
-     ]
-    }
-   ],
-   "source": [
-    "d={}\n",
-    "while True:\n",
-    "    print(\"\"\"welcome\n",
-    "         For registration : Press : '1'\n",
-    "         For login        : Press :'2'\"\"\")\n",
-    "\n",
-    "    answer=input()\n",
-    "    if answer==\"1\":\n",
-    "        registration()\n",
-    "    elif answer==\"2\":\n",
-    "        mail=input(\"Enter your valid Email_ID  : \")\n",
-    "        pass_word=input(\"enter your password\")\n",
-    "        searching()\n",
-    "    else:\n",
-    "        print(\"worngly entered \")\n",
-    "        break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "6ed06085",
    "metadata": {},
    "outputs": [],
@@ -64,21 +18,21 @@
     "def registration():\n",
     "        mail=checking_unique_mailID()\n",
     "        pass_word=password()\n",
-    "        with open(\"G:/jupyter notebook/register_file.txt\",mode=\"a\") as register_file:\n",
+    "        with open(\"./register_file.txt\",mode=\"a\") as register_file:\n",
     "              register_file.write(f\"mail is {mail} and password is {pass_word}\\n\")\n",
     "        print(\"successfully registered\")        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "6e25026e",
    "metadata": {},
    "outputs": [],
    "source": [
     "def searching():\n",
     "    search=f\"mail is {mail} and password is {pass_word}\"\n",
-    "    with open(\"G:/jupyter notebook/register_file.txt\",mode=\"r\") as register_file:\n",
+    "    with open(\"./register_file.txt\",mode=\"r\") as register_file:\n",
     "        for i in register_file:\n",
     "            if  i is search:\n",
     "                print(\"successfully logined\")\n",
@@ -87,7 +41,7 @@
     "            user=input(\"press y or n\")\n",
     "            if user==\"y\":\n",
     "                username=input(\"enter ur email for verification : \")\n",
-    "                with open(\"G:/jupyter notebook/register_file.txt\",mode=\"r\") as register_file:\n",
+    "                with open(\"./register_file.txt\",mode=\"r\") as register_file:\n",
     "                     for i in register_file:\n",
     "                        if  username in i:\n",
     "                            print(\"your password is : \",i.split(\" \")[6])\n",
@@ -101,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "id": "84ddbdfd",
    "metadata": {},
    "outputs": [],
@@ -120,32 +74,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "id": "80b540de",
    "metadata": {},
    "outputs": [],
    "source": [
     "def checking_unique_mailID():\n",
     "    email=input(\"Enter your valid Email_ID  : \")\n",
-    "    with open(\"G:/jupyter notebook/register_file.txt\",mode=\"r\") as register_file:\n",
-    "        for i in register_file:\n",
-    "            if email in i:\n",
-    "                print(\"this username or mailID is already taken\")\n",
-    "                return checking_unique_mailID()\n",
-    "                break\n",
-    "        else:\n",
-    "            return email\n",
-    "        \n",
+    "    try:\n",
+    "        with open(\"./register_file.txt\",mode=\"r\") as register_file: \n",
+    "            for i in register_file:\n",
+    "                if email in i:\n",
+    "                    print(\"this username or mailID is already taken\")\n",
+    "                    return checking_unique_mailID()\n",
+    "                    break\n",
+    "            else:\n",
+    "                return email\n",
+    "    except:\n",
+    "        return email\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a38579fc",
-   "metadata": {},
+   "execution_count": 15,
+   "id": "ee5cf1d6",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "while True:\n",
+    "    print(\"\"\"welcome\n",
+    "         For registration : Press : '1'\n",
+    "         For login        : Press :'2'\"\"\")\n",
+    "\n",
+    "    answer=input()\n",
+    "    if answer==\"1\":\n",
+    "        registration()\n",
+    "    elif answer==\"2\":\n",
+    "        mail=input(\"Enter your valid Email_ID  : \")\n",
+    "        pass_word=input(\"enter your password\")\n",
+    "        searching()\n",
+    "    else:\n",
+    "        print(\"worngly entered \")\n",
+    "        break"
+   ]
   }
  ],
  "metadata": {
