--- a/Assignment_1_GUVI.ipynb
+++ b/Assignment_1_GUVI.ipynb
@@ -10,8 +10,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "6ed06085",
+   "execution_count": null,
+   "id": "9e6e7402",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the program takes valid emails and check it is unique(for non_repeating emails)\n",
+    "# the program takes valid passwords\n",
+    "# in login ,it can retrive the forgotten password once the entered email is already registered"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "f42db5b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,22 +32,22 @@
     "        pass_word=password()\n",
     "        with open(\"./register_file.txt\",mode=\"a\") as register_file:\n",
     "              register_file.write(f\"mail is {mail} and password is {pass_word}\\n\")\n",
-    "        print(\"successfully registered\")        "
+    "        print(\"successfully registered\")  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "6e25026e",
+   "execution_count": 31,
+   "id": "29c195fd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def searching():\n",
-    "    search=f\"mail is {mail} and password is {pass_word}\"\n",
+    "def searching(mail,pass_word):\n",
     "    with open(\"./register_file.txt\",mode=\"r\") as register_file:\n",
     "        for i in register_file:\n",
-    "            if  i is search:\n",
+    "            if  mail in i and pass_word in i:\n",
     "                print(\"successfully logined\")\n",
+    "                break\n",
     "        else:\n",
     "            print(\"did you for forget password press 'y' or else 'n'\")\n",
     "            user=input(\"press y or n\")\n",
@@ -45,6 +57,7 @@
     "                     for i in register_file:\n",
     "                        if  username in i:\n",
     "                            print(\"your password is : \",i.split(\" \")[6])\n",
+    "                            break\n",
     "                     else:\n",
     "                        print(\"no such email\")\n",
     "            else:\n",
@@ -55,8 +68,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "84ddbdfd",
+   "execution_count": 32,
+   "id": "996ebec6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,55 +80,56 @@
     "            return pd\n",
     "        else:\n",
     "            print(\"your password is in wrong type\")\n",
-    "            return password()\n",
-    "\n",
-    "    "
+    "            return password()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "80b540de",
+   "execution_count": 33,
+   "id": "7cd2e0e5",
    "metadata": {},
    "outputs": [],
    "source": [
     "def checking_unique_mailID():\n",
     "    email=input(\"Enter your valid Email_ID  : \")\n",
-    "    try:\n",
-    "        with open(\"./register_file.txt\",mode=\"r\") as register_file: \n",
-    "            for i in register_file:\n",
-    "                if email in i:\n",
-    "                    print(\"this username or mailID is already taken\")\n",
-    "                    return checking_unique_mailID()\n",
-    "                    break\n",
-    "            else:\n",
+    "    if all([\"@\" in email,\".\" in email]):\n",
+    "        if all([email.index(\"@\")<email.index(\".\"),email.split(\"@\")[0],email.index(\"@\")+1 !=email.index(\".\"),\\\n",
+    "                       email.split(\"@\")[1][0] not in [\"!\",\"@\",\"#\",\"$\",\"%\",\"^\",\"&\"]]):\n",
+    "            try:\n",
+    "                with open(\"./register_file.txt\",mode=\"r\") as register_file: \n",
+    "                    for i in register_file:\n",
+    "                        if email in i:\n",
+    "                            print(\"this username or mailID is already taken\")\n",
+    "                            return checking_unique_mailID()\n",
+    "                            break\n",
+    "                    else:\n",
+    "                        return email\n",
+    "            except:\n",
     "                return email\n",
-    "    except:\n",
-    "        return email\n",
+    "    else:\n",
+    "            print(\"invalid email\")\n",
+    "            return checking_unique_mailID()\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "ee5cf1d6",
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 34,
+   "id": "30a7642a",
+   "metadata": {},
    "outputs": [],
    "source": [
     "while True:\n",
     "    print(\"\"\"welcome\n",
     "         For registration : Press : '1'\n",
     "         For login        : Press :'2'\"\"\")\n",
-    "\n",
     "    answer=input()\n",
     "    if answer==\"1\":\n",
     "        registration()\n",
     "    elif answer==\"2\":\n",
     "        mail=input(\"Enter your valid Email_ID  : \")\n",
     "        pass_word=input(\"enter your password\")\n",
-    "        searching()\n",
+    "        searching(mail,pass_word)\n",
     "    else:\n",
     "        print(\"worngly entered \")\n",
     "        break"
